--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1"
+    />
+    <link rel="icon" href="./public/icon.png" type="image/x-icon" />
     <title>Moviesly</title>
   </head>
   <body>
