--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
-    <link rel="icon" href="./public/icon.png" type="image/x-icon" />
+    <link rel="icon" href="./icon.png" type="image/x-icon" />
     <title>Moviesly</title>
   </head>
   <body>
